# lyrical_mcp

./: Dockerfile  README.md  main.py  pyproject.toml  smithery.yaml
docs/: smithery_example.md
lyrical_mcp/: main.py
